crates/wac-parser/tests/resolution/fail/invalid-use.wac
type x = u32;

interface a {
    use x.{a};
}